<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="match_parent"
    tools:context=".view.AgendaInsert">
    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/redCenter"
        android:text="@string/titulo"/>
    <EditText
        android:textColor="@color/redCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtTitulo"/>
    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/redCenter"
        android:text="@string/local"/>
    <EditText
        android:textColor="@color/redCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtLocal"/>
    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/redCenter"
        android:text="@string/data"/>
    <EditText
        android:textColor="@color/redCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtData"/>
    <Button
        android:id="@+id/btn_insert_save_festa"
        android:layout_marginTop="8dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="@color/redCenter"
        android:textColor="@color/cinza"
        android:layout_width="match_parent"
        android:text="@string/criar_festa"
        android:layout_height="wrap_content" />
</LinearLayout>