<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    android:weightSum="10"
    tools:context=".view.Dashboard">

    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <!--TextView
            android:text="Amor Secreto"
            android:textSize="34dp"
            android:layout_centerInParent="true"
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:textColor="@color/cinza"
            android:layout_height="wrap_content"-->


    </RelativeLayout>

    <GridLayout
        android:layout_marginTop="5dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="true"
        android:rowCount="3"
        android:padding="14dp"
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <!-- Linha 1 -->
        <android.support.v7.widget.CardView
            android:onClick="goAgenda"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_rowWeight="1"
            android:layout_marginRight="16dp"
            android:layout_width="0dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">
            <LinearLayout
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_agenda"/>
                <TextView
                    android:textColor="@color/redCenter"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agenda"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:onClick="goMusica"
            android:id="@+id/cvMusica"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_musicas"/>
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/redCenter"
                    android:textSize="18sp"
                    android:text="@string/musicas"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Linha 2 -->
        <android.support.v7.widget.CardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:onClick="goPhotos"
            android:layout_marginLeft="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_fotos"/>
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/redCenter"
                    android:textSize="18sp"
                    android:text="@string/fotos"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_height="0dp"
            android:onClick="goVideos"
            android:layout_width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_videos"/>
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/redCenter"
                    android:textSize="18sp"
                    android:text="@string/videos"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Linha 3 -->
        <android.support.v7.widget.CardView
            android:onClick="goNoticias"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_noticias"/>
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/redCenter"
                    android:textSize="18sp"
                    android:text="@string/noticias"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_batepapo"/>
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/redCenter"
                    android:textSize="18sp"
                    android:text="@string/batepapo"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </GridLayout>

</LinearLayout>